--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel=“stylesheet” type=“text/css” href=“/qr-code-component-main/style.css”>
+    <link rel=“stylesheet” type=“text/css” href="/qr-code-component-main/style.css">
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
     <div class="container">
-      <img class="qrimg" src="/images/image-qr-code.png" alt="" />
+      <img class="qrimg" src="/qr-code-component-main/images/image-qr-code.png" alt="" />
 
       <div class="textCntainer">
         <p
