--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel=“stylesheet” type=“text/css” href="/qr-code-component-main/style.css">
+    <link rel="stylesheet" type="text/css" href="/qr-code-component-main/style.css">
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
